--- a/Python/global_templates/global/static/global/css/style.css
+++ b/Python/global_templates/global/static/global/css/style.css
@@ -7,54 +7,90 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 62.5%;
+/* Layout celular */
+@media only screen and (max-width: 576px) {
+  html {
+    font-size: 50%;
+  }
+
+  .content {
+    padding: 2rem;
+  }
+
+  .post {
+    display: grid;
+    /* grid-template-columns: 0.8fr 1fr; */
+    row-gap: 1%;
+  }
+
+  .post_body1 {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+/* Layout PC */
+@media only screen and (min-width: 577px) {
+  html {
+    font-size: 62.5%;
+  }
+
+  .content {
+    padding: 4rem;
+  }
+
+  .post {
+    display: grid;
+    grid-template-columns: 0.8fr 1fr;
+    max-width: 1250px;
+    margin: 0 auto;
+    row-gap: 2%;
+  }
 }
 
 .header {
-    height: 66px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1400px;
-    margin-left: auto;
-    margin-right: auto;
+  height: 66px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header_r {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  display: flex;
+  width: flex;
+  max-width: 70px;
+  height: 66px;
+  justify-content: flex-end;
+
 }
 
 .architect_icon {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .architect_icon a {
-    max-width:20%;
-    max-height:20%;
-    cursor: pointer;
-    margin-left: auto;
-    margin-right: 10%;
-    margin-top: 1%;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
 }
 
 
 .architect_icon img {
-    max-width:100%;
-    max-height:100%;
+  max-width: 90%;
 }
 
 .line {
-    box-sizing: border-box;
-    height: 1px;
-    width: 100%;
-    background: black;
-    max-width: 1500px;
-    margin-left: auto;
-    margin-right: auto;
+  box-sizing: border-box;
+  height: 1px;
+  width: 100%;
+  background: black;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
@@ -65,83 +101,70 @@ body {
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.content {
-  padding: 10rem;
-}
-
-.post {
-  display: grid;
-  grid-template-columns: 0.8fr 1fr;
-  max-width: 1250px;
-  margin: 0 auto;
-  row-gap: 10%;
+.titulo-post {
+  text-align: center;
 }
 
 .post_body1 img {
-    max-width:60%;
+  max-width: 60%;
 }
 
 .post_body2 {
-    background: #040546d1;
-    color: #f1f1f1d1;
-    border-radius: 10px;
-	text-align: left;
-	font-size: 1.2em;
-    box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.2);
+  background: #040546d1;
+  color: #f1f1f1d1;
+  border-radius: 10px;
+  text-align: left;
+  font-size: 1.2em;
+  box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .post_body2 p {
-    padding: 1%;
+  padding: 1%;
 }
 
 .post_body2 a {
-    color: #f1f1f1d1;
+  color: #f1f1f1d1;
 }
 
 .post_body2 a:hover {
-    color: white;
+  color: white;
 }
 
 .post_body3 {
-    background: #00000004;
-    box-shadow: 0 5px 5px -2px rgba(0, 0, 0, 0.2);
+  background: #00000004;
+  box-shadow: 0 5px 5px -2px rgba(0, 0, 0, 0.2);
 }
 
 .post_body3 img {
-    max-width:100%;
+  max-width: 100%;
 }
 
-.post_body4 {
-    background: #00000004;
-    border-radius: 10px;
-	text-align: left;
-	font-size: 1.2em;
-    box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.2);
+.post_body4, .post_body6, .post_body8 {
+  background: #00000004;
+  border-radius: 10px;
+  text-align: left;
+  font-size: 1.2em;
+  box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.post_body4 p {
-    padding: 1%;
+.post_body4 p, .post_body6 p, .post_body8 p {
+  padding: 1%;
 }
 
-.post_body5 {
-    background-color: #1e1e1e; 
-    color: #d4d4d4; 
-    border-radius: 5px;
-    max-width: 100%;
-    overflow-x: auto;
-    overflow-y: auto;
+.post_body7 {
+  background-color: #1e1e1e;
+  color: #d4d4d4;
+  border-radius: 5px;
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: auto;
 }
 
-code {
+/* code {
     display: block;
-}
+} */
 
-pre {
-    margin: 0;
-    white-space: pre-wrap; 
-}
-
-.token.keyword {
+/* .token.keyword {
     color: #569cd6; 
 }
 
@@ -155,38 +178,22 @@ pre {
 
 .token.comment {
     color: #6a9955; 
-}
-
-.post_body6 {
-    background: #00000004;
-    /* color: #f1f1f1d1; */
-    border-radius: 10px;
-	text-align: left;
-	font-size: 1.2em;
-    box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.post_body6 p {
-    padding: 1%;
-}
+} */
 
 .board {
-    height: 66px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1400px;
-    margin-left: auto;
-    margin-right: auto;
+  height: 66px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 140%;
 }
 
 .board_r {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    font-size: 18px;
-    margin-right: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-right: 24px;
 }
-
-
-
