Adicionada duas prints do projeto: Uma do tamanho das imagens Docker e outra da ultima execução do pipeline jenkins do backend. Criação do texto de descrição do projeto. Criação do texto de descrição do script Terraform. Reformulação do quadro de script Terraform para pegar automaticamente o conteudo do arquivo main.tf. Reformulação das grids e layout CSS que estava sobrepondo os itens do rodapé tanto na versão PC quanto Mobile

--- a/Python/global_templates/global/partials/postblock.html
+++ b/Python/global_templates/global/partials/postblock.html
@@ -29,6 +29,12 @@
     </p>
 </div>
 <div class="post_body5">
+    <br>
+    <br>
+    <img class="img_docker_size" src="{% static 'global/static/global/images/docker-images.png' %}">
+    <br>
+    <br>
+    <img class="img_jenkins" src="{% static 'global/static/global/images/jenkins-pipeline.png' %}">
 </div>
 <div class="post_body6">
     <h3 class="titulo-post">Projeto: MyAzure</h3>
@@ -42,10 +48,10 @@
 <div class="post_body7">
     <pre><code>
         {{ posts.script_terraform }}
-            
-        </code></pre>
+    </code></pre>
     </div>
 <div class="post_body8">
+    <h3 class="titulo-post">Terraform</h3>
     <p>
         {{ posts.descricao_terraform }}
     </p>
